unpackaged/main/default/objects/asp04__PaymentSchedule__c/asp04__PaymentSchedule__c.object-meta.xml
<CustomObject>
    <label>Payment Schedule</label>
    <nameField>
        <displayFormat>PS-{000000000}</displayFormat>
        <label>Payment Schedule Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>