unpackaged/main/default/objects/asp04__PaymentSchedule__c/fields/asp04__Authorisation__c.field-meta.xml
<CustomField>
    <fullName>asp04__Authorisation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The name of the related Authorisation</inlineHelpText>
    <label>Authorisation</label>
    <referenceTo>asp04__Authorisation__c</referenceTo>
    <relationshipLabel>Payment Schedules</relationshipLabel>
    <relationshipName>Subscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>