unpackaged/main/default/objects/asp04__PaymentSchedule__c/fields/asp04__Authorisation_Status__c.field-meta.xml
<CustomField>
    <fullName>asp04__Authorisation_Status__c</fullName>
    <formula>TEXT( asp04__Authorisation__r.asp04__Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This shows the Status of the associated Authorisation</inlineHelpText>
    <label>Authorisation Status</label>
    <type>Text</type>
</CustomField>