unpackaged/main/default/objects/asp04__PaymentSchedule__c/fields/asp04__Final_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>asp04__Final_Payment_Date__c</fullName>
    <inlineHelpText>After this date no more payment requests will be raised from this Payment Schedule</inlineHelpText>
    <label>Final Payment Date</label>
    <type>Date</type>
</CustomField>