unpackaged/main/default/objects/asp04__PaymentSchedule__c/fields/asp04__Last_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>asp04__Last_Payment_Date__c</fullName>
    <inlineHelpText>The date of the last payment created for this Payment Schedule</inlineHelpText>
    <label>Last Payment Date</label>
    <type>Date</type>
</CustomField>