unpackaged/main/default/objects/asp04__PaymentSchedule__c/fields/asp04__Next_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>asp04__Next_Payment_Date__c</fullName>
    <description>The date that the next payment will occur on</description>
    <inlineHelpText>The due date of the first or next payment.</inlineHelpText>
    <label>Next Payment Date</label>
    <type>Date</type>
</CustomField>