unpackaged/main/default/objects/asp04__PaymentSchedule__c/fields/asp04__Next_Process_Date__c.field-meta.xml
<CustomField>
    <fullName>asp04__Next_Process_Date__c</fullName>
    <formula>IF( asp04__Payment_Route_Selected__c  = &#39;Direct Debit&#39;, asp04__Next_Payment_Date__c - $Setup.asp04__AsperatoOneSettings__c.asp04__BACS_Delay__c, asp04__Next_Payment_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The date that the next processing will occur taking into account delays caused by the Direct Debit system</inlineHelpText>
    <label>Next Process Date</label>
    <type>Date</type>
</CustomField>