unpackaged/main/default/objects/asp04__PaymentSchedule__c/fields/asp04__Payment_Route_Selected__c.field-meta.xml
<CustomField>
    <fullName>asp04__Payment_Route_Selected__c</fullName>
    <formula>TEXT(asp04__Authorisation__r.asp04__Payment_Route_Selected__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The payment route that was selected by the customer when they estblished the authorisation.</inlineHelpText>
    <label>Payment Route Selected</label>
    <type>Text</type>
</CustomField>