unpackaged/main/default/objects/asp04__PaymentSchedule__c/fields/asp04__Regular_Amount__c.field-meta.xml
<CustomField>
    <fullName>asp04__Regular_Amount__c</fullName>
    <description>The amount to be collected</description>
    <inlineHelpText>The monetary value of the repeat payment</inlineHelpText>
    <label>Regular Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>