unpackaged/main/default/objects/asp04__PaymentSchedule__c/fields/asp04__Status__c.field-meta.xml
<CustomField>
    <fullName>asp04__Status__c</fullName>
    <inlineHelpText>Indicates whether the Payment Schedule is in force (Active) or otherwise.  No new payment requests will be raised while a Payment Schedule is not in force.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
                <default>true</default>
                <label>Inactive</label>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>