unpackaged/main/default/objects/asp04__PaymentSchedule__c/listViews/asp04__Active_Payment_Schedules.listView-meta.xml
<ListView>
    <fullName>asp04__Active_Payment_Schedules</fullName>
    <columns>NAME</columns>
    <columns>asp04__Regular_Amount__c</columns>
    <columns>asp04__Next_Payment_Date__c</columns>
    <columns>asp04__Frequency__c</columns>
    <columns>asp04__Payment_Route_Selected__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>asp04__Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>Active Payment Schedules</label>
</ListView>