unpackaged/main/default/objects/asp04__PaymentSchedule__c/listViews/asp04__All.listView-meta.xml
<ListView>
    <fullName>asp04__All</fullName>
    <columns>NAME</columns>
    <columns>asp04__Status__c</columns>
    <columns>asp04__Regular_Amount__c</columns>
    <columns>asp04__Next_Payment_Date__c</columns>
    <columns>asp04__Frequency__c</columns>
    <columns>asp04__Payment_Route_Selected__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>